--- a/css/app.css
+++ b/css/app.css
@@ -2,25 +2,79 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "IBM Plex Sans", sans-serif;
+  color: #000000;
 }
 
-h1 {
-  color: #30c28d;
+a {
+  color: #000000;
+  text-decoration: none;
+}
+
+a:hover,
+i:hover {
+  color: #897248;
+}
+
+ul li {
+  display: inline-block;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+h2 {
+  color: #ffffff;
+  font-size: 60px;
+  font-weight: 300;
+}
+
+header {
+  padding: 50px 0;
   text-align: center;
 }
 
-.paragraphs {
-  width: 80%;
-  margin: auto;
+h1 {
+  font-size: 24px;
 }
 
-.buttons {
-  display: flex;
-  justify-content: center;
+p.location {
+  font-weight: 300;
 }
 
-.buttons > button {
-  margin: 10px 20px;
-  padding: 10px 20px;
-  background-color: #30c28d;
+#social-list i {
+  font-size: 30px;
+}
+
+#enjoy {
+  position: relative;
+  width: 100%;
+  height: 600px;
+  background-image: url("https://maywooddemo.files.wordpress.com/2019/08/louis-hansel-nkmc3kluihu-unsplash-1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.container-text {
+  position: absolute;
+  top: 50%;
+  right: 55%;
+  transform: translatey(-50%);
+  width: 500px;
+}
+
+p.inside-image {
+  margin: 30px 0;
+  font-size: 20px;
+  color: #ffffff;
+}
+
+button {
+  padding: 10px;
+  background-color: #897248;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 17px;
+  border: none;
 }
